made circle start at current time. updated code readability: changed random 33 value to 24 like it should have been to avoid much conversion

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Mono");
+// font-family: 'Share Tech Mono', monospace;
+.display-time {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 100;
+}
 .handle {
   fill: #fff;
   stroke: #000;
