--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -45,8 +45,7 @@ body {
   top: 0;
   right: 0;
   left: 0;
-  // transform: scale(1.2);
-  transform: translateY(-24px) scale(1.44);
+  transform: translate(3px, -25px) scale(1.45) rotate(-90deg);
 }
 
 .display-time {
